# verify

./: .gitignore  .verify.yaml  README.md  pyproject.toml
claude-code-skill/: verify.md
examples/: android.verify.yaml  fastapi-service.verify.yaml  generic.verify.yaml  linux_desktop.verify.yaml  mobile-web-app.verify.yaml  stm32.verify.yaml  web-app.verify.yaml  web.verify.yaml
tests/: conftest.py  test_backends_android.py  test_backends_generic.py  test_backends_linux.py  test_backends_renode.py  test_backends_web.py  test_checks.py  test_cli.py  test_config.py  test_detect.py  test_mcp_server.py  test_runner.py  test_sandbox.py  test_vision.py
tests/e2e/: test_e2e_dogfood.py  test_e2e_real_vision.py  test_e2e_web.py
tests/e2e/sample_web_app/: broken.html  good.html  server.py
verify/: __init__.py  cli.py  config.py  detect.py  mcp_server.py  runner.py  sandbox.py  vision.py
verify/backends/: __init__.py  android.py  base.py  generic.py  linux_desktop.py  registry.py  renode.py  web.py
verify/checks/: __init__.py  http.py  journalctl.py  playwright.py  pytest.py  shell.py  systemd.py  ui_cmd.py
