[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-cli"
version = "0.1.0"
description = "Stop claiming code works without actually testing it. End-to-end verifier for any project — runs your tests, checks services and endpoints, and exercises UI in a real headless browser."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jeremiah Mackey" }]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
ui   = ["playwright>=1.40"]
test = ["pytest>=7"]
all  = ["playwright>=1.40", "pytest>=7"]

[project.scripts]
verify = "verify.cli:main"

[project.urls]
Homepage = "https://github.com/JeremiahM37/verify"

[tool.setuptools.packages.find]
include = ["verify*"]
